// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component Render correctly with default props 1`] = `
<div>
  <div
    class="chakra-form-control css-0"
    role="group"
  >
    <div
      class="chakra-input__group css-bx0blc"
      data-group="true"
    >
      <input
        class="chakra-input css-adz8kx"
        id="field-:r0:"
        name="email"
        placeholder="Email"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`InputField component Render correctly with error message 1`] = `
<div>
  <div
    class="chakra-form-control css-0"
    data-invalid=""
    role="group"
  >
    <div
      class="chakra-input__group css-bx0blc"
      data-group="true"
    >
      <input
        aria-describedby="field-:r2:-feedback"
        aria-invalid="true"
        class="chakra-input css-adz8kx"
        id="field-:r2:"
        name="email"
        placeholder="Email"
        type="text"
      />
    </div>
    <div
      aria-live="polite"
      class="chakra-form__error-message css-1qc3jta"
      id="field-:r2:-feedback"
    >
      Field is required
    </div>
  </div>
</div>
`;

exports[`InputField component Render correctly with right icon 1`] = `
<div>
  <div
    class="chakra-form-control css-0"
    role="group"
  >
    <div
      class="chakra-input__group css-bx0blc"
      data-group="true"
    >
      <div
        class="chakra-input__left-element css-1u2k0bl"
      >
        <svg
          fill="none"
          height="18"
          viewBox="0 0 18 18"
          width="18"
        >
          <path
            d="M8.1111 15.2222C12.0385 15.2222 15.2222 12.0385 15.2222 8.1111C15.2222 4.18375 12.0385 1 8.1111 1C4.18375 1 1 4.18375 1 8.1111C1 12.0385 4.18375 15.2222 8.1111 15.2222Z"
            stroke="#18181B"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M17 16.9998L13.1333 13.1332"
            stroke="#18181B"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        class="chakra-input css-adz8kx"
        id="field-:r1:"
        name="email"
        placeholder="Email"
        type="text"
      />
    </div>
  </div>
</div>
`;
